# Integral_A01067963

./: .gitignore  CMakeLists.txt  README.md
IntegralA_A01067963/: CMakeLists.txt  README.md  calificaciones_des.csv  casosprueba.txt  dlink.h  heap.h  main.cpp  materias.h  search.h  sort.h
IntegralA_A01067963_casos-prueba/: CMakeLists.txt  README.md  main.cpp  search.h  splay.h
IntegralA_Algoritmos-de-Ordenamiento/: CMakeLists.txt  README.md  main.cpp  search.h  sort.h
IntegralB_A01067963/: CMakeLists.txt  Graph.h  README.md  data.txt  graph.txt  hastMain.txt  main.cpp  quadratic.h  zoo.txt
